# habit_control_API

./: .env.sample  Dockerfile  README.MD  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
habit/: models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habit/migrations/: 0001_initial.py  0002_initial.py  0003_reward_delete_useful.py  0004_alter_reward_habit.py  0005_remove_habit_is_nice_reward_is_nice.py  0006_alter_habit_options.py  0007_alter_habit_owner.py  0008_habit_task.py  0009_alter_habit_period.py  0010_alter_habit_lide_time.py
habit/src/: periodic_tusks.py  telegram_api.py
users/: models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_username.py  0002_verify.py  0003_alter_verify_user_code_alter_verify_verify_code.py  0004_alter_verify_verify_code.py  0005_alter_verify_verify_code.py  0006_alter_verify_verify_code.py  0007_alter_verify_verify_code.py  0008_alter_verify_verify_code.py  0009_alter_verify_verify_code.py  0010_alter_verify_verify_code.py  0011_user_telegram_chat_alter_verify_verify_code.py
